# anysay

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.py  teststring  tiny-rick.txt  tmp.txt
anysay/: __init__.py  __main__.py  prepare.py
rickgen/: picke_rick.txt  pyproject.toml  test.txt  test2.py
ricks/: tiny-rick.txt
src/: __main__.py
src/anysay/: __init__.py  image_to_ascii.py  messages.py  prepare.py  resize.py  say.py
src/ricksay/: __init__.py  __main__.py  image_to_ascii.py  prepare.py  resize.py  say.py
